<resources>
    <string name="app_name">Mall Lite</string>
    <string name="enter">دخول</string>
    <string name="please_waiting">برجاء الانتظار…</string>
    <string name="popular">الأكثر طلباً</string>
    <string name="name">اسم المستخدم</string>
    <string name="pound"> جنية</string>
    <string name="setComment">أترك تعليقك..</string>
    <string name="rating_text">تقييمك للمنتج يساعدنا على الحفاظ على جودة الخدمة المقدمة لجميع عملائنا</string>
    <string name="rating">تقييم منتج !</string>
    <string name="check">معاينة</string>
    <string name="delivery_time_for_hanmade">يتم تجهيز هذا الصنف وتسليمه خلال 7–10 أيام</string>
    <string name="delivery_time_one_day">يتم تجهيز هذا الصنف وتسليمه خلال 24 ساعة</string>
    <string name="cash_on_delivery">يتم الدفع عند استلام الطلب</string>
    <string name="red_line">(يسري هذا البند على المنتجات المحجوزة فقط)</string>
    <string name="choose_category">اختر الصنف</string>
    <string name="choose_kind">اختر النوع</string>
    <string name="minimum_auantity">0.25</string>
    <string name="available">متوفر</string>
    <string name="accept">موافق</string>
    <string name="dismess2">إلغاء</string>
    <string name="total_payment">إجمالي المشتريات</string>
    <string name="cart_is_empty">السلة فارغة</string>
    <string name="delivery_payment">خدمة توصيل</string>
    <string name="minusMark">-</string>
    <string name="plusMark">+</string>
    <string name="g.m">ج.م</string>
    <string name="total">الإجمالي</string>
    <string name="_0_00">0.00</string>
    <string name="food_layout_text">كاندي اسباني</string>
    <string name="_0">0</string>
    <string name="sign_in_user_data">تسجيل بيانات عميل</string>
    <string name="categories">الأقسام</string>
    <string name="falte_num">"شقة رقم : "</string>
    <string name="flat__">"الدور : "</string>
    <string name="build_name">اسم المبنى (اختياري)</string>
    <string name="build_num">رقم المبنى</string>
    <string name="street_name">اسم الشارع</string>
    <string name="flatNum">الدور</string>
    <string name="floor2">شقة رقم</string>
    <string name="choose_mini_city">اختر  المنطقة</string>
    <string name="detailsFor_address">تفاصيل تريد إضافتها للعنوان</string>
    <string name="ok">إضافة</string>
    <string name="add_new_address">لإضافة عنوان جديد</string>
    <string name="press_at">"اضغط على "</string>
    <string name="okAddress">تم</string>
    <string name="etc">المنزل ، العمل.. إلخ</string>
    <string name="setAddressNAme">ضع اسم لجهة العنوان</string>
    <string name="addresses">عناويني</string>
    <string name="address">أضف عنوان جديد</string>
    <string name="not_address_in_your_menu">لا يوجد عناوين في قائمتك!</string>
    <string name="flate_number">"شقة رقم : "</string>
    <string name="floor">"الدور : "</string>
    <string name="productAfterSomeDays">"منتجات يتم استلامها خلال 10 ايام"</string>
    <string name="total_pay">إجمالي المشتريات</string>
    <string name="delivery_price">خدمة التوصيل</string>
    <string name="productTomorrow">منتجات يتم استلامها غداً</string>
    <string name="vodafonCash">يتم دفع 70% من قيمة المبلغ وذلك بعد التنسيق مع خدمة العملاء</string>
    <string name="commentOrder">ملاحظات على الطلب (اختياري)</string>
    <string name="orders">طلباتي</string>
    <string name="order_number">رقم الطلب :  </string>
    <string name="order_date">تاريخ الطلب :  </string>
    <string name="order_state">حالة الطلب :  </string>
    <string name="deposit_payment">مقدم الحجز :  </string>
    <string name="order_waiting_delivery">طلبات قيد التوصيل</string>
    <string name="deposit_order">طلبات محجوزة</string>
    <string name="total_your_payment">إجمالي مشترياتك</string>
    <string name="deposit_payment_salary">مقدم حجز</string>
    <string name="payment_duo">مدفوعات مستحقة</string>
    <string name="discount">العروض</string>
    <string name="you_dont_have_any_order">ليس لديك طلبات مرسلة</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notFoundOrders">لا يوجد طلبات..</string>
    <string name="dash"><![CDATA[<<<]]></string>
    <string name="remaining">متبقي : </string>
    <string name="paid">مدفوع : </string>
    <string name="phone_number">رقم الموبايل</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
    <string name="veryfi_code_success">التأكد من صلاحية رقم الهاتف</string>
    <string name="enter_code">قم بإدخال الرمز الذي تم إرساله إلى</string>
    <string name="resend_code">إعادة إرسال رمز التفعيل</string>
    <string name="action_search">بحث</string>
    <string name="favorite_text">قائمة المفضلة الخاصة بك فارغة!</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="customer_service">خدمة العملاء</string>
    <string name="typing_message">اكتب رسالتك</string>
    <string name="contact_use_with">تواصل معنا عبر :</string>
    <string name="follow_use">تابعنا على :</string>
    <string name="discount_text">انتظر الكثير من العروض والخصومات قريباً..</string>
    <string name="test1">كاندي أسباني</string>
    <string name="test2">150</string>
    <string name="resr3">متوفر</string>
    <string name="rate">4.5</string>
    <string name="submitOrder">تأكيد الطلب</string>
    <string name="add_new_add">أضف عنوان جديد</string>
    <string name="not_found_add">لا يوجد عنوان!</string>

</resources>