<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical"
    android:background="@drawable/bottom_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:textColor="@color/kohly"
        android:fontFamily="@font/font_project"
        android:text="@string/setAddressNAme"
        android:textSize="16sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name_address_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24sp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:hint="@string/etc"
        android:textColor="@color/kohly"
        android:textSize="18sp"
        tools:ignore="Autofill,RtlHardcoded,TextFields"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/kohly"
        app:met_underlineColor="@color/kohly" />


    <com.ornach.nobobutton.NoboButton
        android:id="@+id/btn_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25sp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="8dp"
        app:nb_textStyle="bold"
        app:nb_text="@string/ok"
        app:nb_textSize="16dp"
        app:nb_backgroundColor="@color/kohly"
        app:nb_focusColor="#172467"
        app:nb_textColor="@color/white"
        app:nb_radius="8dp"/>


</LinearLayout>
