<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/white_dialog_background"
    android:layout_width="340dp"
    android:minWidth="340dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blueDark"
        android:textSize="18sp"
        android:fontFamily="@font/font_project"
        android:text="@string/rating"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rating_text"
        android:gravity="right"
        tools:ignore="RtlHardcoded" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_marginTop="16sp"
        android:layout_gravity="center_horizontal"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16sp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setComment"
            android:layout_gravity="right"
            android:gravity="right"
            android:textColor="@color/colorPrimary"
            android:padding="16sp"
            android:maxLength="70"
            tools:ignore="Autofill,RtlHardcoded,TextFields"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16sp"
        android:orientation="horizontal">

        <com.ornach.nobobutton.NoboButton
            android:id="@+id/btnDismiss"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:nb_text="إلغاء"
            app:nb_radius="8dp"
            app:nb_textSize="16sp"
            app:nb_textColor="@color/red"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            app:nb_backgroundColor="@color/low_red"
            app:nb_focusColor="@color/focus_red"/>


        <com.ornach.nobobutton.NoboButton
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:nb_text="إرسال التقييم"
            android:layout_weight="1"
            app:nb_radius="8dp"
            app:nb_textSize="16sp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            app:nb_textColor="@color/green"
            app:nb_backgroundColor="@color/low_green"
            app:nb_focusColor="@color/focus_green"/>



    </LinearLayout>



</LinearLayout>