<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addresses.Addresses">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/toolbar_background"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/font_project"
                android:text="@string/addresses"
                android:textColor="@color/white" />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtAdd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_new_address"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgAdd"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_baseline_add_circle_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtAdd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/press_at"
            android:textSize="16sp" />


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/appBar"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:visibility="gone" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="90dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.ornach.nobobutton.NoboButton
        android:id="@+id/btnAddNewAddress"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:nb_backgroundColor="@color/yellow"
        app:nb_focusColor="@color/low_gray"
        app:nb_radius="55dp"
        app:nb_text="+"
        app:nb_textColor="@color/white"
        app:nb_textSize="18dp"
        app:nb_textStyle="bold" />


</RelativeLayout>