<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignIn.SignIn">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/font_project"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="4dp"
            android:gravity="right"
            android:hint="@string/name"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue"
            app:startIconDrawable="@drawable/ic_baseline_person2_24"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPhoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:gravity="right"
            android:hint="@string/phone_number"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue"
            app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLength="11"
                android:inputType="phone" />


        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_marginTop="65dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <com.ornach.nobobutton.NoboButton
                android:id="@+id/btnSendCode"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:padding="12sp"
                app:nb_backgroundColor="@color/white"
                app:nb_borderColor="@color/blue"
                app:nb_borderWidth="2dp"
                app:nb_focusColor="@color/low_gray"
                app:nb_radius="8dp"
                app:nb_text="إرسال رمز التفعيل"
                app:nb_textColor="@color/blueDark"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                app:nb_textSize="16dp"
                app:nb_textStyle="bold" />


        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>