<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignIn.VerifyOTP">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/font_project"
        android:gravity="center"
        android:text="@string/veryfi_code_success"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/enter_code"
            android:textColor="@color/blue" />


        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/blue" />

        <com.chaos.view.PinView
            android:id="@+id/pinCode"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/low_gray"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            app:lineColor="@color/blue" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/txtResend"
                android:textColor="@color/gray"
                android:layout_marginRight="8dp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/txtResend"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/resend_code"
                android:layout_gravity="center"
                android:gravity="center"/>

            <ProgressBar
                android:id="@+id/progressResend"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_width="15dp"
                android:layout_height="15dp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="65dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>


            <ImageView
                android:id="@+id/imgDone"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_correct_circle_green_24"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                tools:ignore="ContentDescription" />


            <com.ornach.nobobutton.NoboButton
                android:id="@+id/btnConfirm"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="12sp"
                android:layout_centerHorizontal="true"
                app:nb_backgroundColor="@color/white"
                app:nb_borderColor="@color/blue"
                app:nb_borderWidth="2dp"
                app:nb_focusColor="@color/low_gray"
                app:nb_radius="8dp"
                app:nb_text="تأكيد العملية"
                app:nb_textColor="@color/blueDark"
                app:nb_textSize="16dp"
                app:nb_textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>